# Smart_Greenhouse

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
Client/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
Client/components/: Common_components
Client/components/Bluetooth/: CMakeLists.txt  ClientBluetoothController.cpp  ClientBluetoothController.hpp  ClientBluetoothHandler.cpp  ClientBluetoothHandler.hpp  ConnectionHolder.cpp  ConnectionHolder.hpp
Client/components/Drivers/: CMakeLists.txt
Client/components/Drivers/Sensors/: Commands_Definition.hpp  SCD4x.cpp  SCD4x.hpp  SHT4x.cpp  SHT4x.hpp  Sensor.cpp  Sensor.hpp
Client/main/: CMakeLists.txt  ClientStatusIndicator.cpp  ClientStatusIndicator.hpp  GreenhouseManager.cpp  GreenhouseManager.hpp  Kconfig.projbuild  main.cpp
Client/main/Drivers/Com_Interfaces/: I2C_I.cpp  I2C_I.hpp
Common_components/: CMakeLists.txt  Kconfig.projbuild
Common_components/Bluetooth/: BaseBluetoothController.cpp  BaseBluetoothController.hpp  BluetoothDefinitions.hpp
Common_components/Bluetooth/Interfaces/: BaseBluetoothHandlerInterface.hpp
Common_components/Convertors/: Convertor_JSON.cpp  Convertor_JSON.hpp
Common_components/Convertors/DataType/: ByteConvertor.hpp
Common_components/Drivers/Active/: WaterPump.cpp  WaterPump.hpp
Common_components/Drivers/Communication/: I2C.cpp  I2C.hpp
Common_components/Drivers/Motor/: StepMotor.cpp  StepMotor.hpp
Common_components/Drivers/Network/: WiFiDriver.cpp  WiFiDriver.hpp
Common_components/Drivers/Sensor/: SoilMoistureSensor.cpp  SoilMoistureSensor.hpp  WaterLevelSensor.cpp  WaterLevelSensor.hpp
Common_components/Managers/: TimeManager.cpp  TimeManager.hpp
Common_components/Observer/: ObserverInterface.hpp
Common_components/Publisher/: BasePublisherDefinitions.hpp  EventData.hpp  PublisherInterface.hpp
Common_components/Trackers/: BluetoothConnectionTracker.cpp  BluetoothConnectionTracker.hpp  TrackerInterface.hpp  WifiConnectionTracker.cpp  WifiConnectionTracker.hpp
Common_components/Utility/DataType/: DataTypeUtility.hpp
Common_components/Utility/Indicator/: RGB.cpp  RGB.hpp  StatusIndicator.cpp  StatusIndicator.hpp
Common_components/Utility/Network/: MQTT_Client.cpp  MQTT_Client.hpp
Server/: CMakeLists.txt  sdkconfig  sdkconfig.old
Server/components/Bluetooth/: BaseBluetoothDefinitions.hpp  CMakeLists.txt  ServerBluetoothController.cpp  ServerBluetoothController.hpp  ServerBluetoothHandler.cpp  ServerBluetoothHandler.hpp
Server/components/Managers/: CMakeLists.txt  ComponentController.cpp  ComponentController.hpp  EventManager.cpp  EventManager.hpp  Kconfig.projbuild  NetworkManager.cpp  NetworkManager.h  WifiConnectionHolder.cpp  WifiConnectionHolder.hpp
Server/components/Observers/: BluetoothDataObserver.cpp  BluetoothDataObserver.hpp  CMakeLists.txt
Server/components/Publishers/: BluetoothDataPublisher.cpp  BluetoothDataPublisher.hpp  CMakeLists.txt
Server/components/SensorsData/: CMakeLists.txt  SensorsData.cpp  SensorsData.hpp
Server/main/: CMakeLists.txt  GreenhouseDefinitions.hpp  GreenhouseManager.cpp  GreenhouseManager.hpp  Kconfig.projbuild  main.cpp
Server/main/Bluetooth/: BaseBluetoothDefinitions.hpp  BaseBluetoothHandlerInterface.hpp  BluetoothController.cpp  BluetoothController.hpp  ServerBluetoothHandler.cpp  ServerBluetoothHandler.hpp
Server/main/Drivers/Sensors/: Commands_Definition.hpp  SHT4x.cpp  SHT4x.hpp
main/: CMakeLists.txt  GreenhouseManager.cpp  GreenhouseManager.hpp  main.cpp
main/Bluetooth/: BluetoothController.cpp  BluetoothController.hpp
main/Drivers/Sensors/: SHT4x.hpp
